# mini-gpt

./: .gitignore  .prettierignore  LICENSE  README.md  data.py  data.txt  model.py  package-lock.json  package.json  pyproject.toml  tokenizer.py  train.py
.github/workflows/: lint.yml
experiments/ablation_no_positional_embedding/: config.yaml
experiments/ablation_no_residual_connection/: config.yaml
experiments/ablation_post_ln/: config.yaml
experiments/ablation_pre_ln/: config.yaml
experiments/ablation_untie_embedding_weights/: config.yaml
experiments/intentional_overfitting/: config.yaml
modules/: multi_head_attention.py  self_attention.py  token_positional_embedding.py  transformer_block.py
tests/: test_data.py  test_multi_head_attention.py  test_token_positional_embedding.py  test_transformer_block.py
